5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1712_2498.log
== TEST (2019-05-08 15:12:47) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = a - b
	b = c * a
	print(ano)
	print(b)
	print(a)
	ano = ano + 1
print(ano)

-- OUTPUT:
0
-11709675.0
-329850
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:13:25) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = a - b
	b = c * a
	ano = ano + 1
print(ano)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:13:39) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = a - b
	b = c * a
	ano = ano + 1
print(ano)

-- EXECUTION TIME:
0.149196
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:14:15) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = a - b
	b = (c * a)/100
	ano = ano + 1
print(ano)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:15:22) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = a - b
	b = (d * b)/100
	ano = ano + 1
print(ano)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:17:38) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	ano = ano + 1
print(ano)

-- OUTPUT:
732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:20:39) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)
	b = (b * d)
	e = (a * b)/100
	ano = ano + 1
	
print(ano)

-- OUTPUT:
732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:06) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)
	b = (b * d)
	e = (a * b)/100
	ano = ano + 1
	print(ano)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:26:00) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)
	b = (b * d)
	ano = ano + 1
	if(a >= b):
	print(ano)

-- ERROR:
File "XXXX", line 13
    print(ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:26:04) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)
	b = (b * d)
	ano = ano + 1
	if(a >= b):
print(ano)

-- ERROR:
File "XXXX", line 13
    print(ano)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:26:30) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	ano = ano + 1
	if(a >= b):
print(ano)

-- ERROR:
File "XXXX", line 13
    print(ano)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:26:42) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	ano = ano + 1
if(a >= b):
print(ano)

-- ERROR:
File "XXXX", line 13
    print(ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:27:24) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	ano = ano + 1
	if(a >= b):
	print(ano)

-- ERROR:
File "XXXX", line 13
    print(ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:28:56) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	print(ano)
	ano = ano + 1
	if(a >= b):
print(ano)

-- ERROR:
File "XXXX", line 14
    print(ano)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:28:59) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	print(ano)
	ano = ano + 1
	if(a >= b):
	print(ano)

-- ERROR:
File "XXXX", line 14
    print(ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:05) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	print(ano)
	ano = ano + 1
	if(a >= b):
	
print(ano)

-- ERROR:
File "XXXX", line 15
    print(ano)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:39) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	if(a >= b):
	a = (a * c)/100
	b = (b * d)/100
	print(ano)
	ano = ano + 1
print(ano)

-- ERROR:
File "XXXX", line 10
    a = (a * c)/100
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:51) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = (a * c)/100
	b = (b * d)/100
	print(ano)
	ano = ano + 1
print(ano)

-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:33:44) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = a * (c)/100
	b = b * (d)/100
	print(ano)
	ano = ano + 1
print(ano)

-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:33:58) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

ano = 0

while(a>0):
	a = a * (c)/100
	b = b * (d)/100
	print(ano)
	ano = ano + 1
print(ano)

-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:16:33) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

w = a + ((a * c)/100)
q = b + ((b * d)/100)
p = 1 

while(w < q):
	w = w + ((w * c)/100)
	q = q + ((q * d)/100)
	p = p + 1
print(p)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:16:54) 
-- CODE:
a = int(input("A:"))
b = int(input("B:"))
c = float(input("C:"))
d = float(input("D:"))

w = a + ((a * c)/100)
q = b + ((b * d)/100)
p = 1 

while(w < q):
	w = w + ((w * c)/100)
	q = q + ((q * d)/100)
	p = p + 1
print(p)

-- EXECUTION TIME:
0.122663
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
